--- a/index.html
+++ b/index.html
@@ -173,6 +173,127 @@
       </div>
     </div>
 
+    <section class="char">
+      <div class="container">
+        <h4 class="char__title-main">Характеристики</h4>
+        <div class="char__inner">
+          <div class="char__items">
+            <ul class="char__list">
+              <li class="char__title">Общие</li>
+              <li class="char__line">
+                <p class="char__name">Производитель</p>
+                <p class="char__descr">Xiaomi</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Вид</p>
+                <p class="char__descr">
+                  взрослый, дорожный, городской, электровелосипед, алюминиевая
+                  рама
+                </p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Колеса</p>
+                <p class="char__descr">26, двойной алюминиевый обод</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Электропривод</p>
+                <p class="char__descr">мотор 250W, разгон до 25 км/ч</p>
+              </li>
+            </ul>
+
+            <ul class="char__list">
+              <li class="char__title">амортизация</li>
+              <li class="char__line">
+                <p class="char__name">Тип амортизации</p>
+                <p class="char__descr">амортизирующая вилка (Hard tail)</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Вилка</p>
+                <p class="char__descr">амортизирующая вилка (Hard tail)</p>
+              </li>
+            </ul>
+
+            <ul class="char__list">
+              <li class="char__title">управление</li>
+              <li class="char__line">
+                <p class="char__name">Руль</p>
+                <p class="char__descr">изогнутый, регулируемый подъем</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Манетки</p>
+                <p class="char__descr">триггерные однорычажные, Shimano</p>
+              </li>
+            </ul>
+
+            <ul class="char__list">
+              <li class="char__title">характеристика трансмиссии</li>
+              <li class="char__line">
+                <p class="char__name">Количество скоростей</p>
+                <p class="char__descr">7</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Педали</p>
+                <p class="char__descr">классические</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Передний переключатель</p>
+                <p class="char__descr">1 звезда</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Задний переключатель</p>
+                <p class="char__descr">Shimano Tourney (прогулочный)</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Кассета</p>
+                <p class="char__descr">7 звезд</p>
+              </li>
+            </ul>
+
+            <ul class="char__list">
+              <li class="char__title">тормоза</li>
+              <li class="char__line">
+                <p class="char__name">Передний</p>
+                <p class="char__descr">дисковый механический</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Задний</p>
+                <p class="char__descr">дисковый механический</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Готовность к установке дисковых</p>
+                <p class="char__descr">рама, вилка, втулка</p>
+              </li>
+            </ul>
+
+            <ul class="char__list">
+              <li class="char__title">прочее</li>
+              <li class="char__line">
+                <p class="char__name">Оснащение</p>
+                <p class="char__descr">электрооборудование, звонок</p>
+              </li>
+
+              <li class="char__line">
+                <p class="char__name">Вес</p>
+                <p class="char__descr">25 кг</p>
+              </li>
+            </ul>
+          </div>
+          <img class="char__img" src="./images/speed.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/main.js"></script>
